Username saving fixed and logout added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=GlowUpApp
-Server.port = 7070 
+Server.port = 7070
 
 
-spring.data.mongodb.uri=mongodb+srv://hilasentt:sSSHSlEks2IFrJ70@cluster0.8plxk8s.mongodb.net/project0?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://hilasentt:ybSwvWoVK41na44Q@cluster0.8plxk8s.mongodb.net/project0?retryWrites=true&w=majority&appName=Cluster0
 
 GlowUpApp.app.jwtCookieName= GlowUpApp
 GlowUpApp.app.jwtSecret= ======================GlowUpApp=Spring===========================
