--- a/app/angular.json
+++ b/app/angular.json
@@ -35,6 +35,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
+              "node_modules/boxicons/css/boxicons.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
@@ -103,6 +105,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/boxicons/css/boxicons.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css",
               "src/styles.css"
