--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "ngx-simple-text-editor": "^5.0.0",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
