--- a/app/package.json
+++ b/app/package.json
@@ -31,8 +31,10 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "ngx-simple-text-editor": "^5.0.0",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
